--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -5,6 +5,16 @@
   animation: meals-appear 1s ease-out forwards;
 }
 
+.mealsLoading {
+  color: white;
+  text-align: center;
+}
+
+.mealsError {
+  color: red;
+  text-align: center;
+}
+
 .meals ul {
   list-style: none;
   margin: 0;
